--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.0.7",
-    "@strapi/plugin-users-permissions": "4.0.7",
     "@strapi/plugin-i18n": "4.0.7",
-    "mysql": "2.18.1"
+    "@strapi/plugin-users-permissions": "4.0.7",
+    "@strapi/strapi": "^4.0.7",
+    "mysql": "2.18.1",
+    "strapi-generate-plugin": "^3.6.8"
   },
   "author": {
     "name": "A Strapi developer"
