--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@strapi/plugin-users-permissions": "4.0.7",
     "@strapi/strapi": "^4.0.7",
     "mysql": "2.18.1",
-    "strapi-generate-plugin": "^3.6.8"
+    "strapi-generate-plugin": "^3.6.8",
+    "strapi-plugin-populate-deep": "^0.1.2"
   },
   "author": {
     "name": "A Strapi developer"
